# CMT307-Stock-Price-Prediction

./: .gitignore  CNN_trading_strategy_results.csv  MLStock.ipynb  MSFT.csv  README.md  mlstock_1DCNN.txt  pyproject.toml  requirements.txt
Models/: MLStock.ipynb  cnn_1d.txt
data/: README.md
data/processed/: msft_test_processed.csv  msft_train_processed.csv  msft_val_processed.csv
notebooks/: 02_preprocessing_and_features.ipynb  03_random_forest.ipynb  04_cnn.py  _01_descriptive_analyis.ipynb  _03_random_forest.ipynb  _04_cnn.py  _05_FCN_ExtraTrees_XGBoost.ipynb  df.csv  model_i_predictions.csv  model_ii_predictions.csv  model_iii_predictions.csv  run_models.py
src/: backtesting.py  cnn_1d.py  features.py  show_results.py  trading.py
