[tool.poetry]
name = "cmt307-stock-price-prediction"
version = "0.1.0"
description = ""
authors = ["Tom <tr664@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.4"
pandas = "^3.0.2"
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
scikit-learn = "^1.8.0"
yfinance = "^1.3.0"
jupyter = "^1.1.1"
notebook = "^7.5.6"
tensorflow = "^2.21.0"
keras-tuner = "^1.4.8"
xgboost = "^3.2.0"
eli5 = "^0.16.0"
shap = "^0.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
